Get basic routes set up.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-osu-website-v2",
   "version": "1.0.0",
-  "homepage": "http://web.engr.oregonstate.edu/~hessro/",
+  "homepage": "http://web.engr.oregonstate.edu/~hessro",
   "author": {
     "name": "Rob Hess",
     "email": "hessro@oregonstate.edu"
