--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.11",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.0.24",
+    "graphql": "^16.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
